
[TestPane_View_EmptyState - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│#    ID      Size A M D Digest Command          │
│No layer data                                   │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
╰────────────────────────────────────────────────╯
---

[TestPane_View_WithLayers - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce026b62356eec3ad1214f92be2c9dc│
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c3708fb6261126453e34483abd8b│
│3/14 49fe       0 1 0 0 93e208 mkdir -p /root/example/really/nested           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /root/example/somefile1.txt   │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/example/somefile1.txt          │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /root/example/somefile2.txt   │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /root/example/somefile3.txt   │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/somefile3.txt /root/saved.txt │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /root/.saved.txt            │
│10/14 f2fc       0 0 0 3 bc2e36 rm -rf /root/example/                         │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14b81316baa1a31c38c97686a8f0│
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /tmp/saved.again1.txt      │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /root/.data/saved.again2.tx│
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved.txt                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_Focused - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce026b62356eec3ad1214f92be2c9dc│
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c3708fb6261126453e34483abd8b│
│3/14 49fe       0 1 0 0 93e208 mkdir -p /root/example/really/nested           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /root/example/somefile1.txt   │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/example/somefile1.txt          │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /root/example/somefile2.txt   │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /root/example/somefile3.txt   │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/somefile3.txt /root/saved.txt │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /root/.saved.txt            │
│10/14 f2fc       0 0 0 3 bc2e36 rm -rf /root/example/                         │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14b81316baa1a31c38c97686a8f0│
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /tmp/saved.again1.txt      │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /root/.data/saved.again2.tx│
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved.txt                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SmallWidth - 1]
╭──────────────────────────────────────╮
│Layers                                │
│                                      │
│#    ID      Size A M D Digest        │
│1/14 28cf    1.1M 0 0 0 23bc2b        │
│2/14 1871    6.3k 1 0 0 a65b7d        │
│3/14 49fe       0 1 0 0 93e208        │
│4/14 80cd    6.3k 1 0 0 4abad3        │
│5/14 c99e    6.3k 0 1 0 14c9a6        │
│6/14 5eca    6.3k 1 0 0 778fb5        │
│7/14 f07c    6.3k 1 0 0 f275b8        │
│8/14 4618    6.3k 1 0 1 dd1eff        │
│9/14 a103    6.3k 1 0 0 8d1869        │
│10/14 f2fc       0 0 0 3 bc2e36       │
│11/14 aad3    2.1k 2 0 0 7f648d       │
│12/14 3d4a    6.3k 1 0 0 a4b8f9       │
│13/14 81b1    6.3k 1 0 0 22a44d       │
│14/14 cfb3    6.3k 0 1 0 ba689c       │
│                                      │
╰──────────────────────────────────────╯
---

[TestPane_View_SmallHeight - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_LargeSize - 1]
╭──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                                                                │
│                                                                                                                      │
│#    ID      Size A M D Digest Command                                                                                │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce026b62356eec3ad1214f92be2c9dc063fe205bd5e600be3492c4dfb17148bd in /  │
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c3708fb6261126453e34483abd8bf7b26ed16d952fd976994d68e72d93be2 in /so│
│3/14 49fe       0 1 0 0 93e208 mkdir -p /root/example/really/nested                                                   │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /root/example/somefile1.txt                                           │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/example/somefile1.txt                                                  │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /root/example/somefile2.txt                                           │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /root/example/somefile3.txt                                           │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/somefile3.txt /root/saved.txt                                         │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /root/.saved.txt                                                    │
│10/14 f2fc       0 0 0 3 bc2e36 rm -rf /root/example/                                                                 │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14b81316baa1a31c38c97686a8f030c98cba2035c968412749e33e0c4427e in /ro│
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /tmp/saved.again1.txt                                              │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /root/.data/saved.again2.txt                                       │
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved.txt                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_View_SecondLayerSelected - 1]
╭──────────────────────────────────────────────────────────────────────────────╮
│Layers                                                                        │
│                                                                              │
│#    ID      Size A M D Digest Command                                        │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:ce026b62356eec3ad1214f92be2c9dc│
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:139c3708fb6261126453e34483abd8b│
│3/14 49fe       0 1 0 0 93e208 mkdir -p /root/example/really/nested           │
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt /root/example/somefile1.txt   │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/example/somefile1.txt          │
│6/14 5eca    6.3k 1 0 0 778fb5 cp /somefile.txt /root/example/somefile2.txt   │
│7/14 f07c    6.3k 1 0 0 f275b8 cp /somefile.txt /root/example/somefile3.txt   │
│8/14 4618    6.3k 1 0 1 dd1eff mv /root/example/somefile3.txt /root/saved.txt │
│9/14 a103    6.3k 1 0 0 8d1869 cp /root/saved.txt /root/.saved.txt            │
│10/14 f2fc       0 0 0 3 bc2e36 rm -rf /root/example/                         │
│11/14 aad3    2.1k 2 0 0 7f648d #(nop) ADD dir:7ec14b81316baa1a31c38c97686a8f0│
│12/14 3d4a    6.3k 1 0 0 a4b8f9 cp /root/saved.txt /tmp/saved.again1.txt      │
│13/14 81b1    6.3k 1 0 0 22a44d cp /root/saved.txt /root/.data/saved.again2.tx│
│14/14 cfb3    6.3k 0 1 0 ba689c chmod +x /root/saved.txt                      │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
---

[TestPane_Update_WithLayoutMsg - 1]
╭────────────────────────────────────────────────╮
│Layers                                          │
│                                                │
│#    ID      Size A M D Digest Command          │
│1/14 28cf    1.1M 0 0 0 23bc2b #(nop) ADD file:c│
│2/14 1871    6.3k 1 0 0 a65b7d #(nop) ADD file:1│
│3/14 49fe       0 1 0 0 93e208 mkdir -p /root/ex│
│4/14 80cd    6.3k 1 0 0 4abad3 cp /somefile.txt │
│5/14 c99e    6.3k 0 1 0 14c9a6 chmod 444 /root/e│
╰────────────────────────────────────────────────╯
---
